# skills

./: .gitignore  AGENTS.md  README.md  justfile
mcp-server/: .gitignore  README.md  justfile  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  server.py
mcp-server/src/mcp_server/tools/: __init__.py  data.py  system.py  text.py
mcp-server/tests/: test_data.py  test_server.py  test_system.py  test_text.py
skills/agent-workflow/: SKILL.md
skills/automated-git-workflow/: SKILL.md
skills/bash-cross-platform/: SKILL.md
skills/ci-cd-patterns/: SKILL.md
skills/code-review/: SKILL.md
skills/cross-language-comments/: SKILL.md
skills/docker-project-structure/: SKILL.md
skills/dockerfile-best-practices/: SKILL.md
skills/docs-strategy/: SKILL.md
skills/documentation-standards/: SKILL.md
skills/elixir-coding-style/: SKILL.md
skills/frontend-design/: SKILL.md
skills/git-branching/: SKILL.md
skills/git-conventions/: SKILL.md
skills/git-pull-requests/: SKILL.md
skills/go-coding-style/: SKILL.md
skills/implementation-plans/: SKILL.md
skills/kubernetes-manifests/: SKILL.md
skills/linting-standards/: SKILL.md
skills/mcp-server/: SKILL.md
skills/project-templates/: SKILL.md
skills/python-api-structure/: SKILL.md
skills/python-coding-style/: SKILL.md
skills/python-debugging/: SKILL.md
skills/python-precommit-setup/: SKILL.md
skills/python-project-structure/: SKILL.md
skills/readme-blueprint-generator/: SKILL.md
skills/self-improvement/: SKILL.md
skills/shell-coding-style/: SKILL.md
skills/skill-creator/: SKILL.md
(+14 files in other folders)
