[project]
name = "mcp-server"
version = "0.1.0"
description = "Example MCP server with system info, text analysis, and data tools"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["B", "C4", "C90", "E", "F", "I", "PLR", "RUF", "S", "SIM", "T20", "UP"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "T20"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# --- BasedPyright ---
[tool.basedpyright]
include = ["src"]
typeCheckingMode = "standard"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
